418014 Handle NTFS canonical exceptions during alias check
replaced URL returns with URI